Fixed the content not showing when user is logged

--- a/app/dashboard/DashboardPage.module.css
+++ b/app/dashboard/DashboardPage.module.css
@@ -1,3 +1,3 @@
 .sidebarWrapper {
-  composes: switcher from "../../styles/SidebarWrapper.css";
+  composes: sidebarWrapper from "../../styles/SidebarWrapper.module.css";
 }
